openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-print
  labels:
    app.kubernetes.io/name: secure-print
